[Bug 389411] Mingw build error - undefined reference to`_imp__PKIX_ERRORNAMES'. sr=bob